# PROTO-PPE

./: .gitignore  README.md
PPE-CPP-202401-A/: CMakeLists.txt
PPE-CPP-202401-A/docs/: CMakeLists.txt  MANUAL.md  PPE_API.md  QSGMANUAL.md  README.md  STANDARD.md  TEMPLATE.md
PPE-CPP-202401-A/source/: PPE.h  ProgramGUI.cpp  main.cpp
PPE-CPP-202401-A/source/game/: GameProgramObject.h
PPE-CPP-202401-A/source/program/: GameProgramObject.h
PPE-CPP-202401-A/src/: ProgramContext.cpp  ProgramContext.h  ProgramGUI.h  ProgramLogger.h  ProgramObject.h  archive.txt  gui.xml  main.cpp
PPE-CPP-202401-A/src/P3E/: P3E_exc.h  P3E_min.h
PPE-CPP-202401-A/src/P3E/include/: ProgramConfig.h  README.md
PPE-CPP-202401-A/src/PPE/: PPE_min.h
PPE-CPP-202401-A/src/PPE/include/: ControllerConfig.h  ProgramConfig.h  ProgramObject.h
PPE-CPP-202401-A/src/editor/: ProgramContext.h
PPE-CPP-202401-A/src/engine/: ProgramConfig.h
PPE-CPP-202401-A/src/program/: AudioProgramObject.h
PPP-CPP-202401-A/: CMakeLists.txt  PPP-CPP-202401-A.cpp  PPP-CPP-202401-A.h
PPP-CPP-202401-A/docs/: README.md
